--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,11 +21,11 @@
 			</div>
 			<form th:action="@{/login}" method="post">
 				<div class="form__input-group">
-					<input type="text" class="form__input" autofocus placeholder="Enter username" id="usernameInput" />
+					<input type="text" name="username" class="form__input" autofocus placeholder="Enter username" id="usernameInput" />
 					<div class="padding"></div>
 				</div>
 				<div class="form__input-group">
-					<input type="password" class="form__input" autofocus placeholder="Enter password"
+					<input  type="password" name="password" class="form__input" autofocus placeholder="Enter password"
 						id="passwordInput" />
 					<div class="padding"></div>
 					<div class="padding"></div>
