--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -7,10 +7,14 @@
 	<title>Add Book</title>
 	<link th:href="@{css/bootstrap.min.css}" rel="stylesheet" />
 	<link rel="stylesheet" th:href="@{css/book.css}" />
+	<link rel="stylesheet" th:href="@{css/index.css}" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
 </head>
 
 <body>
+	<nav th:replace="fragments/nav :: header">
+	</nav>
+	
 	<div class="container">
 		<div class="row">
 			<div class="col-md-2"></div>
@@ -134,6 +138,9 @@
 			</div>
 		</div>
 	</div>
+	
+	<footer th:replace="fragments/footer :: footer">
+	</footer>
 	<script th:src="@{js/bootstrap.bundle.min.js}"></script>
 	<script th:src="@{js/popper.min.js}"></script>
 	<script th:src="@{js/bootstrap.min.js}"></script>
