--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,46 +12,9 @@
 </head>
 
 <body>
-	<nav>
-		<div class="row justify-content-between align-items-center nav-bg">
-			<div class="col-md-4">
-				<div class="logo">
-					<div>
-						<p>Library</p>
-						<p>Management</p>
-						<p>System</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4 d-flex text-center text-md-left mb-3 mb-md-0 align-items-center">
-				<div class="justify-content-md-start">
-					<a th:href="@{/books}" class="btn btn-width mr-md-3 mb-2 mb-md-0">Books</a>
-					<a th:href="@{/ebooks}" class="btn btn-width mr-md-3 mb-2 mb-md-0">EBooks</a>
-					<a th:href="@{/addBook}" class="btn btn-width mb-2 mb-md-0">Add Book</a>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="row bg-danger">
-					<div class="col-1"></div>
-					<div class="col-4 bg-black"> <a th:href="@{/addCategory}"
-							class="col-4 btn btn-width btn-width-category mx-2 mb-2 mb-md-0">Add
-							Category</a>
-					</div>
-					<div class="col-3">
-						<a th:href="@{/register}"  class="btn btn-width ">Register</a>
-					</div>
-					<div class="col-3 bg-black">
-						<a sec:authorize="!isAuthenticated()" th:href="@{/login}"
-							class="col-4 btn btn-width mx-2 mb-2 mb-md-0">Login</a>
-						<form style="display: inline;" class="col-4 mx-2 mb-2 mb-md-0" sec:authorize="isAuthenticated()"
-							th:action="@{/logout}" method="post">
-							<input th:href="@{/login}" type="submit" value="Logout" class="btn btn-width" />
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
+	<nav th:replace="fragments/nav :: header">
 	</nav>
+
 	<div class="text-success">
 		<h2>[[${message}]]</h2>
 	</div>
@@ -156,10 +119,8 @@
 			</div>
 		</section>
 	</main>
-	<footer class="mt-4">
-		<div class="d-flex justify-content-center align-items-center footer">
-			<p>@CopyRight By STAR SE</p>
-		</div>
+	<footer th:replace="fragments/footer :: footer">
+
 	</footer>
 	<script th:src="@{js/bootstrap.bundle.min.js}"></script>
 	<script th:src="@{js/popper.min.js}"></script>
