--- a/src/main/resources/templates/updateBook.html
+++ b/src/main/resources/templates/updateBook.html
@@ -6,11 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Update Book</title>
 	<link rel="stylesheet" th:href="@{css/bootstrap.min.css}"  />
+	<link rel="stylesheet" th:href="@{css/index.css}" />
 	<link rel="stylesheet" th:href="@{css/update.css}">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
 </head>
 
 <body>
+	<nav th:replace="fragments/nav :: header">
+	</nav>
+	
 	<div class="container">
 		<div class="row">
 			<div class="col-md-2"></div>
@@ -135,6 +139,9 @@
 			</div>
 		</div>
 	</div>
+	
+	<footer th:replace="fragments/footer :: footer">
+	</footer>
 	<script th:src="@{js/bootstrap.bundle.min.js}"></script>
 	<script th:src="@{js/popper.min.js}"></script>
 	<script th:src="@{js/bootstrap.min.js}"></script>
