--- a/src/main/resources/templates/addBookCategory.html
+++ b/src/main/resources/templates/addBookCategory.html
@@ -1,72 +1,74 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Add Category</title>
-    <link th:href="@{css/bootstrap.min.css}" rel="stylesheet" />
-    <link rel="stylesheet" th:href="@{css/index.css}" />
-    <link rel="stylesheet" th:href="@{css/book.css}" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
-  </head>
-  <body>
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Add Category</title>
+	<link th:href="@{css/bootstrap.min.css}" rel="stylesheet" />
+	<link rel="stylesheet" th:href="@{css/index.css}" />
+	<link rel="stylesheet" th:href="@{css/book.css}" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+</head>
+
+<body>
 	<nav th:replace="fragments/nav :: header">
 	</nav>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2"></div>
-        <!-- here -->
-        <div class="d-flex col-md-4 justify-content-center mt-5">
-          <!-- here -->
-          <img src="./img/library.png" alt="library" class="img-custom mt-5" />
-        </div>
-        <!-- here -->
-        <div class="col-md-4 mt-4">
-          <!-- here -->
-          <p class="px-5 ml-md-5 m-3 fw-bold title-custom mt-4 mb-5">
-            Add Category
-          </p>
-          <form th:action="@{/addCategory}" method="post" th:object="${category}">
-            <table class="mt-5 table-custom">
-              <tbody>
-                <tr>
-                  <td>
-                    <div class="form-control-custom m-3 text-center">
-                      Category ID
-                    </div>
-                  </td>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-2"></div>
+			<!-- here -->
+			<div class="d-flex col-md-4 justify-content-center mt-5">
+				<!-- here -->
+				<img src="./img/library.png" alt="library" class="img-custom mt-5" />
+			</div>
+			<!-- here -->
+			<div class="col-md-4 mt-4">
+				<!-- here -->
+				<p class="px-5 ml-md-5 m-3 fw-bold title-custom mt-4 mb-5">
+					Add Category
+				</p>
+				<form th:action="@{/addCategory}" method="post" th:object="${category}">
+					<table class="mt-5 table-custom">
+						<tbody>
+							<tr>
+								<td>
+									<div class="form-control-custom m-3 text-center">
+										Category ID
+									</div>
+								</td>
 
-                  <td>
-                    <div><input type="text" class="input-custom px-4" th:field="*{id}" readonly/></div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <div class="form-control-custom m-3 text-center">
-                      Category Name
-                    </div>
-                  </td>
-                  <td>
-                    <div><input type="text" class="input-custom px-4" th:field="*{categoryName}"/></div>
-                    <p class="alert alert-warning" th:if="${#fields.hasErrors('categoryName')}" th:errors="*{categoryName}"></p>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <div class="d-flex justify-content-center">
-              <input
-                class="add-category-button mt-3"
-                type="submit"
-                value="Add Book Category" />
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-    <footer th:replace="fragments/footer :: footer">
+								<td>
+									<div><input type="text" class="input-custom px-4" th:field="*{id}" readonly /></div>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<div class="form-control-custom m-3 text-center">
+										Category Name
+									</div>
+								</td>
+								<td>
+									<div><input type="text" class="input-custom px-4" th:field="*{categoryName}" />
+									</div>
+									<p class="alert alert-warning" th:if="${#fields.hasErrors('categoryName')}"
+										th:errors="*{categoryName}"></p>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<div class="d-flex justify-content-center">
+						<input class="add-category-button mt-3" type="submit" value="Add Book Category" />
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+	<footer th:replace="fragments/footer :: footer">
 	</footer>
-    <script th:src="@{js/bootstrap.bundle.min.js}"></script>
+	<script th:src="@{js/bootstrap.bundle.min.js}"></script>
 	<script th:src="@{js/popper.min.js}"></script>
 	<script th:src="@{js/bootstrap.min.js}"></script>
-  </body>
+</body>
+
 </html>
