--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -48,7 +48,7 @@
 					<input class="form__button a mt-5" type="submit" value="Register" id="registerButton" />
 
 					<div class="padding"></div>
-					<a th:href="@{/}"><button class="form__button" id="loginButton">Go Home</button></a>
+					<a class="form__button" th:href="@{/}" id="loginButton">Go Home</a>
 				</div>
 			</form>
 		</div>
