--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -171,6 +171,12 @@ body {
 	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
+.card-custom img{
+	width: 100px;
+	height: 120px;
+	
+}
+
 .card-custom:hover {
 	background: rgba(139, 165, 139, 0.49);
 }
