--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -3,6 +3,9 @@
 body {
 	font-family: Inter, Helvetica, sans-serif;
 }
+body::-webkit-scrollbar{
+    display: none;
+  }
 
 .no-book {
 	color: rgba(0, 0, 0, 0.48);
