--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -12,10 +12,8 @@
 </head>
 
 <body>
-	<nav th:replace="fragments/nav :: header">
-	</nav>
 
-	<div class="container">
+	<div class="container parent">
 		<div class="row">
 			<div class="col-md-2"></div>
 			<div class="d-flex col-md-4 justify-content-center mt-5">
