--- a/src/main/resources/templates/updateBook.html
+++ b/src/main/resources/templates/updateBook.html
@@ -12,10 +12,8 @@
 </head>
 
 <body>
-	<nav th:replace="fragments/nav :: header">
-	</nav>
 
-	<div class="container">
+	<div class="container parent">
 		<div class="row">
 			<div class="col-md-2"></div>
 			<div class="d-flex col-md-4 justify-content-center mt-5">
@@ -141,9 +139,6 @@
 			</div>
 		</div>
 	</div>
-
-	<footer th:replace="fragments/footer :: footer">
-	</footer>
 	<script th:src="@{js/bootstrap.bundle.min.js}"></script>
 	<script th:src="@{js/popper.min.js}"></script>
 	<script th:src="@{js/bootstrap.min.js}"></script>
